fix: made DynamicPages, Sequence overlap

--- a/app/component/DynamicPages/DynamicPages.module.css
+++ b/app/component/DynamicPages/DynamicPages.module.css
@@ -5,7 +5,7 @@
   min-width: 0;
   min-height: 100%;
   overflow: hidden;
-  z-index: 7;
+  z-index: 8;
 }
 
 .page {
